--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Notz</string>
+    <string name="dialog_add_note_title">Aggiungi nota</string>
+    <string name="dialog_positive_button">Aggiungi</string>
+    <string name="dialog_negative_button">Annulla</string>
 </resources>
