--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="dialog_add_note_title">Aggiungi nota</string>
     <string name="dialog_positive_button">Aggiungi</string>
     <string name="dialog_negative_button">Annulla</string>
+    <string name="ok">OK</string>
 </resources>
