--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="dialog_positive_button">Aggiungi</string>
     <string name="dialog_negative_button">Annulla</string>
     <string name="ok">OK</string>
+    <string name="delete">Elimina</string>
 </resources>
