show on top favorite note

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="delete">Elimina</string>
     <string name="note_removed">Puoi ancora annullare l\'eliminazione della nota</string>
     <string name="cancel">Annulla</string>
+    <string name="add_favorite">Fissa la nota in alto</string>
 </resources>
